# CashManager

CashManagerApplication/: BillDisplay.qml  BillDisplayForm.ui.qml  CashManager.qml  CashManager.qml.autosave  CashManagerApplication.pro  CashManagerApplication.pro.user.4.8-pre1  CashManagerApplication.pro.user.b22f80d  CashManagerForm.ui.qml  CashManagerForm.ui.qml.autosave  Keypad.qml  KeypadForm.ui.qml  TestForm.ui.qml  bill.cpp  bill.h  bill_product.cpp  cashier.cpp  cashier.h  cashmanager.cpp  cashmanager.h  createbill.cpp  createbill.h  databasehandler.cpp  databasehandler.h  keypad.cpp  keypad.h  listener.h  main.cpp  main.cpp.autosave  main.qml  product.cpp  product.h  qml.qrc
CashManagerDatabase/: CashManagerDatabase.pro  bill.h  bill_product.h  cashier.h  categorie.cpp  categorie.h  createbill.cpp  createbill.h  databasehandler.cpp  databasehandler.h  main.cpp  product.cpp  product.h
CashManagerFacture/: bill.cpp  bill.h  cashManager.pro  cashManager.pro.user.b22f80d.20  main.cpp
CashManagerServer/: CashManager.pro  categorie.cpp  categorie.h  facture.cpp  facture.h  main.cpp  product.cpp  product.h
CashManagerTest/: CMakeLists.txt  CashManager.pro  categorie.cpp  categorie.h  facture.cpp  listener.cpp  product.cpp  product.h  unittest.cpp
build-CashManager-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-CashManagerApplication-Desktop_Qt_5_11_2_GCC_64bit-Debug/: CashManagerApplication  Makefile  moc_cashmanager.cpp  moc_keypad.cpp  moc_predefs.h  qrc_qml.cpp
(+11 files in other folders)
